🚀feature: separate the common styles into am_template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "./themes/am_dark.scss",
     "./themes/am_brown.scss",
     "./themes/am_purple.scss",
+    "./themes/am_template.scss",
   ]
 }
